<resources>
    <string name="app_name">LeopardNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button">Button</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="textview">TextView</string>
    <string name="grab_lunch">Grab Lunch</string>
    <string name="faculty_offices">Faculty Offices</string>
    <string name="wentworth_services">Wentworth Services</string>
    <string name="go_to_class">Go to Class</string>
    <string name="leopardnav">LeopardNav</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="test">test</string>
    <string name="go">GO</string>
    <string name="title_activity_map">mapActivity</string>
    <string-array name="building_names">
        <item>Annex</item>
        <item>Evans Way</item>
        <item>Watson Hall</item>
        <item>Beatty</item>
        <item>Rubenstein</item>
        <item>Kingman</item>
        <item>Dobbs Hall</item>
        <item>Williston Hall</item>
        <item>Willson Hall</item>
        <item>Wentworth Hall</item>
        <item>Ira Allen</item>
        <item>Tudbury</item>
        <item>Building</item>
    </string-array>
    <string-array name="building_ids">
        <item>anx</item>
        <item>evw</item>
        <item>wat</item>
        <item>bty</item>
        <item>rub</item>
        <item>king</item>
        <item>dobb</item>
        <item>will</item>
        <item>wils</item>
        <item>went</item>
        <item>iral</item>
        <item>tdby</item>
        <item>empty</item>
    </string-array>
    <string-array name="anx_Floors">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="evw_Floors">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="wat_Floors">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="bty_Floors">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>M</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="rub_Floors">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="king_Floors">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="dobb_Floors">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="will_Floors">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="wils_Floors">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="went_Floors">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="iral_Floors">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="tdby_Floors">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="empty_Floors">
        <item>Select a building</item>
    </string-array>
    <string-array name="anx_0_Rooms">
        <item>011</item>
        <item>012</item>
        <item>013</item>
        <item>014</item>
    </string-array>
    <string-array name="anx_1_Rooms">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="anx_2_Rooms">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="anx_3_Rooms">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="evw_0_Rooms">
        <item>Suite 002</item>
        <item>Suite 007</item>
        <item>Suite 011</item>
        <item>Suite 017</item>
        <item>Housing Office</item>
        <item>Laundry</item>
    </string-array>
    <string-array name="evw_1_Rooms">
        <item>Suite 102</item>
        <item>Suite 104</item>
        <item>Suite 107</item>
        <item>Suite 108</item>
        <item>Suite 111</item>
        <item>Suite 117</item>
    </string-array>
    <string-array name="evw_2_Rooms">
        <item>Suite 202</item>
        <item>Suite 204</item>
        <item>Suite 207</item>
        <item>Suite 208</item>
        <item>Suite 211</item>
        <item>Suite 217</item>
    </string-array>
    <string-array name="evw_3_Rooms">
        <item>Suite 302</item>
        <item>Suite 304</item>
        <item>Suite 37</item>
        <item>Suite 308</item>
        <item>Suite 311</item>
        <item>Suite 317</item>
    </string-array>
    <string-array name="evw_4_Rooms">
        <item>Suite 402</item>
        <item>Suite 404</item>
        <item>Suite 407</item>
        <item>Suite 408</item>
        <item>Suite 411</item>
        <item>Suite 417</item>
    </string-array>
    <string-array name="evw_5_Rooms">
        <item>Suite 502</item>
        <item>Suite 504</item>
        <item>Suite 507</item>
        <item>Suite 508</item>
        <item>Suite 511</item>
        <item>Suite 517</item>
    </string-array>
    <string-array name="wat_0_Rooms">
        <item>Classroom 001</item>
        <item>Classroom 002</item>
        <item>Classroom 004</item>
        <item>Classroom 006</item>
        <item>Office 003A</item>
        <item>Office 003B</item>
        <item>Office 003C</item>
        <item>Office 003D</item>
        <item>Office 005</item>
        <item>Office 006P</item>
        <item>Office 006R</item>
        <item>Office 006KA</item>
        <item>Office 006KB</item>
    </string-array>
    <string-array name="wat_1_Rooms">
        <item>Auditorium 101</item>
    </string-array>
    <string-array name="wat_2_Rooms">
        <item>011</item>
        <item>012</item>
        <item>013</item>
        <item>014</item>
    </string-array>
    <string-array name="bty_0_Rooms">
        <item>Recreation Room 006</item>
        <item>WIRE Room 012</item>
        <item>Office 013</item>
        <item>Meeting Room 014</item>
        <item>Office 025A</item>
        <item>Bookstore 025</item>
        <item>Meeting Room 026A</item>
        <item>Office 026B</item>
        <item>Office 026C</item>
        <item>Office 026D</item>
        <item>Office 026E</item>
        <item>Office 026G</item>
        <item>Intercultural Center 028</item>
        <item>Meditation Room 029</item>
        <item>Office 031A</item>
        <item>Office 031B</item>
        <item>Meeting Room 031C</item>
        <item>Meeting Room 033</item>
        <item>Organizations Office 035</item>
        <item>Info Hub 036</item>
        <item>Fitness Center 037</item>
        <item>Office 037B</item>
    </string-array>
    <string-array name="bty_1_Rooms">
        <item>Meeting Room 103</item>
        <item>Chartwells Office 107</item>
        <item>Multipurpose Room 119</item>
        <item>Office 112</item>
    </string-array>
    <string-array name="bty_2_Rooms">
        <item>Library</item>
    </string-array>
    <string-array name="bty_M_Rooms">
        <item>Office M207</item>
        <item>Office M208</item>
        <item>Office M0209</item>
        <item>Office M210</item>
        <item>Office M211A</item>
        <item>Office M211</item>
        <item>Office M212A</item>
        <item>Office M212AB</item>
        <item>Study Room M212</item>
        <item>Reading Room M212B</item>
        <item>Service Room M212AA</item>
    </string-array>
    <string-array name="bty_3_Rooms">
        <item>Office 304</item>
        <item>Office 305</item>
        <item>Office 306</item>
        <item>Office 308</item>
        <item>Office 309</item>
        <item>Office 310</item>
        <item>Office 311</item>
        <item>Office 312</item>
        <item>Office 313</item>
        <item>Office 314</item>
        <item>Office 320</item>
        <item>Office 320B</item>
        <item>Office 320C</item>
        <item>Office 320D</item>
        <item>Office 322</item>
        <item>Office 327</item>
        <item>Office 327B</item>
        <item>Office 328</item>
        <item>Office 328A</item>
        <item>Office 329</item>
        <item>MAC Laboratory 301</item>
        <item>PC Laboratory 302</item>
        <item>PC Laboratory 303</item>
        <item>Open Laboratory 318</item>
    </string-array>
    <string-array name="bty_4_Rooms">
        <item>Classroom 401</item>
        <item>Classroom 418</item>
        <item>Classroom 419</item>
        <item>Classroom 420</item>
        <item>Classroom 421</item>
        <item>Office 403</item>
        <item>Office 404</item>
        <item>Office 405</item>
        <item>Office 406</item>
        <item>Office 407</item>
        <item>Office 408</item>
        <item>Office 409</item>
        <item>Office 410</item>
        <item>Office 413</item>
        <item>Office 414</item>
        <item>Office 433</item>
        <item>Office 433A</item>
        <item>Study Room 402</item>
        <item>Lecture Hall 426</item>
        <item>Board Room 432</item>
    </string-array>
    <string-array name="rub_0_Rooms">
        <item>Classroom 001</item>
        <item>Classroom 002</item>
        <item>Classroom 004</item>
        <item>Classroom 006</item>
        <item>Office 003A</item>
        <item>Office 003B</item>
        <item>Office 003C</item>
        <item>Office 003D</item>
        <item>Office 005</item>
        <item>Office 006P</item>
        <item>Office 006R</item>
        <item>Office 006KA</item>
        <item>Office 006KB</item>
    </string-array>
    <string-array name="rub_1_Rooms">
        <item>Classroom 001</item>
        <item>Classroom 002</item>
        <item>Classroom 004</item>
        <item>Classroom 006</item>
        <item>Office 003A</item>
        <item>Office 003B</item>
        <item>Office 003C</item>
        <item>Office 003D</item>
        <item>Office 005</item>
        <item>Office 006P</item>
        <item>Office 006R</item>
        <item>Office 006KA</item>
        <item>Office 006KB</item>
    </string-array>
    <string-array name="rub_2_Rooms">
        <item>Classroom 001</item>
        <item>Classroom 002</item>
        <item>Classroom 004</item>
        <item>Classroom 006</item>
        <item>Office 003A</item>
        <item>Office 003B</item>
        <item>Office 003C</item>
        <item>Office 003D</item>
        <item>Office 005</item>
        <item>Office 006P</item>
        <item>Office 006R</item>
        <item>Office 006KA</item>
        <item>Office 006KB</item>
    </string-array>
    <string-array name="king_1_Rooms">
        <item>Classroom 001</item>
        <item>Classroom 002</item>
        <item>Classroom 004</item>
        <item>Classroom 006</item>
        <item>Office 003A</item>
        <item>Office 003B</item>
        <item>Office 003C</item>
        <item>Office 003D</item>
        <item>Office 005</item>
        <item>Office 006P</item>
        <item>Office 006R</item>
        <item>Office 006KA</item>
        <item>Office 006KB</item>
    </string-array>
</resources>